--- a/packages/frontend/components/doc-details.module.css
+++ b/packages/frontend/components/doc-details.module.css
@@ -10,3 +10,19 @@
 .statusBox p {
   margin: 8px 0;
 }
+
+.getDetailsButton button {
+  appearance: none;
+  padding: 0.5rem 0.75rem;
+  font-weight: 500;
+  font-size: 0.875rem;
+  border-radius: 0.375rem;
+  background-color: transparent;
+  font-family: var(--font-geist-sans);
+  border: 1px solid var(--gray-alpha-200);
+  margin-bottom: 0.5rem;
+}
+
+.getDetailsButton button:active:enabled {
+  background-color: var(--gray-alpha-200);
+}
